--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <header>
-<title>Mistvillage/Antorus</title>
+<title>Mistvillage</title>
 <link rel="stylesheet" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
@@ -42,51 +42,19 @@ window.onclick = function(e) {
     </div>
   </div> 
 </div>
-		
-			
-		<div class="imgcontainer">
-			<img src="img/antorus2.png" id="banner">
-		</div>
 	</div>
 </header>
 
 <body>
 
 	<div id="how_to">
-		<h2>How to Fight: </h2>
-	<ul class="inlineList">
-    		<li><a class="link_color" href="garothi.html">Garothi Worldbreaker</a></li>
-    		<li><a class="link_color" href="felhound.html">Felhounds of Sargeras</a></li>
-    		<li><a class="link_color" href="command.html">Antoran High Command</a></li>
-    		<li><a class="link_color" href="portal.html">Portal Keeper Hasabel</a></li>
-    		<li><a class="link_color" href="eonar.html">Eonar the Life-Binder</a></li>
-    		<li><a class="link_color" href="imonar.html">Imonar the SoulHunter</a></li>
-    		<li><a class="link_color" href="kingorath.html">Kin'gorath</a></li>
-    		<li><a class="link_color" href="vari.html">Varimathras</a></li>
-    		<li><a class="link_color" href="coven.html">Coven of Shivarra</a></li>
-    		<li><a class="link_color" href="aggramar.html">Aggramar</a></li>
-    		<li><a class="link_color" href="argus.html">Argus the Unmaker</a></li>
-	</ul>
+		<h2>Welcome to Mistvillage's Website</h2>
 	</div>
 
 	<div class="main_area">
-		<div class="question">
-			This is where question 1 will go
-			<div class="selection">
-				this is where multiple choice goes				
-			</div>
-			<div class="selection">
-				this is where multiple choice goes				
-			</div>
-			<div class="selection">
-				this is where multiple choice goes				
-			</div>
-			<div class="selection">
-				this is where multiple choice goes				
-			</div>
-		</div>
+		We are a fairly new alliance guild on the Moon Guard server. blah blah blah 
 		<div class="fight">
-		
+		If you want more stuff put it here. I'm being lazy atm. 
 		</div>
 		
 	
@@ -98,7 +66,7 @@ window.onclick = function(e) {
 <!-- align this -->
 
 <footer>
-	<p>Get good scrub</p>
+	<p>Made by Kerynna & Galarissa&copy;</p>
 </footer>
 
 </html>
