--- a/tomb.html
+++ b/tomb.html
@@ -29,16 +29,16 @@ window.onclick = function(e) {
 		</div>
 		
 <div class="navbar">
-  <a href="#home">Home</a>
-  <a href="#news">News</a>
+  <a href="home.html">Home</a>
+  <a href="about.html">About</a>
   <div class="dropdown">
     <button class="dropbtn" onclick="myFunction()">Learn the Fights
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content" id="myDropdown">
-      <a href="#">Antorus</a>
-      <a href="#">Tomb of Sargeras</a>
-      <a href="#">Nighthold</a>
+      <a href="main.html">Antorus</a>
+      <a href="tomb.html">Tomb of Sargeras</a>
+      <a href="nighthold.html">Nighthold</a>
     </div>
   </div> 
 </div>
