--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@ window.onclick = function(e) {
 		
 <div class="navbar">
   <a href="home.html">Home</a>
-  <a href="About.html">About</a>
+  <a href="about.html">About</a>
   <div class="dropdown">
     <button class="dropbtn" onclick="myFunction()">Learn the Fights
       <i class="fa fa-caret-down"></i>
